# site

./: .env.example  .gitignore  .graphifyignore  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md  VERSION.md  astro.config.ts  index.html  package-lock.json  package.json  pyproject.toml  tasks.py
pipeline/: README.md  pyproject.toml
pipeline/analyst/: __init__.py  agent.py  instructions.md
pipeline/auditor/: __init__.py  agent.py  bundle.py  compare.py  instructions.md  models.py  report.py
pipeline/common/: __init__.py  blocklist.py  canonical_url.py  content_loader.py  frontmatter.py  instructions.py  logging_setup.py  models.py  publisher_quality.py  sidecar.py  source_classification.py  templates.py  throttle.py  timeouts.py  utils.py  verdict-scale.md
pipeline/consistency/: __init__.py  agent.py  cli.py  compare.py  models.py  report.py
pipeline/ingestor/: __init__.py  agent.py  cli.py  instructions.md  models.py  validation.py
pipeline/linter/: __main__.py  checks.py  models.py  prune.py  report.py  runner.py
pipeline/orchestrator/: __init__.py  checkpoints.py  cli.py  entity_resolution.py  persistence.py  pipeline.py  review.py  review_queue.py  stats.py
pipeline/researcher/: __init__.py  agent.py  decomposed.py  entity_enricher.py  entity_verifier.py  instructions.md  planner.py  scorer.py
pipeline/tests/: conftest.py  test_acceptance.py  test_agent.py  test_analyst.py  test_arxiv_search.py  test_audit_trail.py  test_auditor_agent.py  test_auditor_models.py  test_blocklist.py  test_brave_search.py  test_canonical_url.py  test_checkpoints.py  test_classify_source_type.py  test_cli.py  test_cli_smoke.py  test_cli_stats.py  test_compare.py  test_consistency_agent.py  test_consistency_models.py  test_content_loader.py  test_entity_enricher.py  test_entity_resolution.py  test_entity_verifier.py  test_linter.py  (+24 more)
(+1707 files in other folders)
